examples/web-to-db.yaml
apiVersion: ztap/v1
kind: NetworkPolicy
metadata:
  name: web-to-db
spec:
  podSelector:
    matchLabels:
      app: web
  egress:
    - to:
        podSelector:
          matchLabels:
            app: db
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: ztap/v1
kind: NetworkPolicy
metadata:
  name: iot-internet-only
spec:
  podSelector:
    matchLabels:
      app: iot
  egress:
    - to:
        ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 443
